--- a/src/index.css
+++ b/src/index.css
@@ -7,20 +7,20 @@
     @apply relative;
     @apply after:absolute;
     @apply after:bg-white;
-    @apply after:h-2;
+    @apply after:h-0.5;
     @apply after:w-full;
     @apply after:rounded-full;
-  }
-  .active::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    height: 3px;
-    background-color: theme("colors.white");
   }
 
   .scrolled {
     @apply bg-accent;
+  }
+
+  :target:not(#home):before {
+    content: "";
+    display: block;
+    height: 96px;
+    margin: -96px 0 0;
   }
 }
 
